created card animation

--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d3f4ea8622.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+    <div class="card">
+        <button class="card__btn"><i class="far fa-question-circle"></i></button>
+        <div class="card__text">
+            <h1 class="card__title">Photography</h1>
+            <h2 class="card__title-name">Anna Kowalska</h2>
+            <p class="card__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sequi odit enim
+                neque maiores recusandae similique facere, doloribus atque voluptatum unde ex natus non eligendi?</p>
+        </div>
+    </div>
 </body>
 
 </html>
